--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       </div>
       <!-- ===============================End=================================>> -->
       <!-- ==============================Cards Work Start========================= -->
-      <div id="render-div" class="flex justify-center gap-3 flex-wrap items-center px-5  mt-5">
+      <div id="render-div" class="flex  justify-center gap-3 flex-wrap items-center px-5  mt-5">
 
-      
-      <!-- <div class="card w-96 bg-base-100 shadow-xl">
+<!--       
+      <div class="card w-96 bg-gray-100 shadow-xl">
   <figure><img width="100%" height="300px" src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
   <div class="card-body">
     <h1 class="card-title text-[#588157] text-2xl">Title : </h1>
